@@ -1,5 +1,7 @@
 package checkmo.domain.club.facade;
 
+import checkmo.apiPayload.code.status.ErrorStatus;
+import checkmo.apiPayload.exception.GeneralException;
 import checkmo.domain.book.facade.BookQueryFacade;
 import checkmo.domain.club.converter.ClubConverter;
 import checkmo.domain.club.entity.Club;
@@ -12,6 +14,7 @@ import checkmo.domain.club.web.dto.bookshelf.BookShelfResponseDTO;
 import checkmo.domain.club.web.dto.club.ClubResponseDTO;
 import checkmo.domain.club.web.dto.meeting.MeetingResponseDTO;
 import checkmo.domain.member.facade.MemberQueryFacade;
+import checkmo.global.dto.BookSharedDTO;
 import checkmo.global.dto.ClubSharedDTO;
 import checkmo.global.dto.MemberSharedDTO;
 import lombok.RequiredArgsConstructor;
@@ -22,7 +25,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -152,24 +154,28 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
      * @param cursorId 페이징 커서 ID
      * @return 해당 상태의 회원 목록 DTO
      */
-
     @Override
     public ClubResponseDTO.ClubMemberListDTO getClubMemberListByStatus(Long clubId, String memberId, String clubMemberStatus, Long cursorId, Integer size) {
+        // 1. 클럽 멤버 리스트 조회
+        clubQueryService.validateClub(clubId);
+        ClubMember requester = clubMemberQueryService.validateClubMember(clubId, memberId);
+        if (!requester.isStaff()) {
+            throw new GeneralException(ErrorStatus.CLUB_STAFF_ONLY);
+        }
 
-        // 1. 커서 초기화
-        Long cursor = (cursorId == null || cursorId == 0L) ? Long.MAX_VALUE : cursorId;
+        // 2. 만약 size가 null이면 기본값 사용 후 size+1만큼 조회
+        if (size == null) size = DEFAULT_PAGE_SIZE;
+        List<ClubMember> members = clubMemberQueryService.getClubMemberListByStatus(clubId, clubMemberStatus, cursorId, size + 1);
 
-        // 2. 페이지 크기 결정 (size가 null 또는 0 이하이면 기본값 사용)
-        int pageSize = (size == null || size <= 0) ? DEFAULT_PAGE_SIZE : size;
-        Pageable pageable = PageRequest.of(0, pageSize);
-
-        // 3. 클럽 멤버 리스트 조회
-        List<ClubMember> members = clubQueryService.getClubMemberListByStatus(clubId, memberId, clubMemberStatus, cursor, pageable);
+        // 3. 페이징 처리
+        boolean hasNext = members.size() > size;
+        if (hasNext) {
+            members = members.subList(0, size);
+        }
+        Long nextCursor = hasNext ? members.getLast().getId() : null;
 
         // 4. memberId 추출
-        List<String> memberIds = members.stream()
-                .map(ClubMember::getMemberId)
-                .toList();
+        List<String> memberIds = extractMemberIds(members);
 
         // 5. 기본 정보 배치 조회
         Map<String, MemberSharedDTO.BasicInfoDTO> memberInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(memberIds);
@@ -182,11 +188,7 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
                 })
                 .toList();
 
-        // 7. 페이징 정보
-        Long lastId = members.isEmpty() ? null : members.get(members.size() - 1).getId();
-        boolean hasNext = clubQueryService.hasNextPage(clubId, clubMemberStatus, lastId);
-
-        return ClubConverter.toClubMemberListDTO(dtoList, hasNext, lastId);
+        return ClubConverter.toClubMemberListDTO(dtoList, hasNext, nextCursor);
     }
 
     /**
@@ -374,13 +376,16 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         }
         Long nextCursor = hasNext ? topics.getLast().getId() : null;
 
-        List<BookShelfResponseDTO.TopicDTO> topicListDTOs = topics.stream()
-                .map(topic -> ClubConverter.fromTopicAndMemberSharedDTOToTopicDTO(
-                        topic,
-                        memberQueryFacade.getMemberBasicInfoForShare(topic.getClubMember().getMemberId()),
-                        memberId
-                ))
-                .toList();
+        List<String> authorIds = extractMemberIdsFromTopics(topics);
+
+        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap =
+                memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
+
+        List<BookShelfResponseDTO.TopicDTO> topicListDTOs = ClubConverter.fromTopicListAndAuthorInfoMapAndMemberIdToTopicDTOList(
+                topics,
+                authorInfoMap,
+                memberId
+        );
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
         return ClubConverter.fromBookShelfDTOToBookShelfDetailDTO(
@@ -404,21 +409,16 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         }
         Long nextCursor = hasNext ? topics.getLast().getId() : null;
 
-        List<String> authorIds = topics.stream()
-                .map(topic -> topic.getClubMember().getMemberId())
-                .distinct()
-                .toList();
+        List<String> authorIds = extractMemberIdsFromTopics(topics);
 
         Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap =
                 memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
 
-        List<BookShelfResponseDTO.TopicDTO> topicListDTOs = topics.stream()
-                .map(topic -> ClubConverter.fromTopicAndMemberSharedDTOToTopicDTO(
-                        topic,
-                        authorInfoMap.get(topic.getClubMember().getMemberId()),
-                        memberId
-                ))
-                .toList();
+        List<BookShelfResponseDTO.TopicDTO> topicListDTOs = ClubConverter.fromTopicListAndAuthorInfoMapAndMemberIdToTopicDTOList(
+                topics,
+                authorInfoMap,
+                memberId
+        );
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
         return ClubConverter.fromTopicDTOListToTopicListDTOForBookshelf(topicListDTOs, hasNext, nextCursor, membershipDTO);
@@ -437,15 +437,25 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         }
         Long nextCursor = hasNext ? bookReviews.get(bookReviews.size() - 1).getId() : null;
 
-        List<BookShelfResponseDTO.BookReviewDTO> bookReviewDTOs = bookReviews.stream()
-                .map(review -> ClubConverter.fromBookReviewAndMemberSharedDTOToBookReviewDTO(
-                        review,
-                        memberQueryFacade.getMemberBasicInfoForShare(review.getClubMember().getMemberId())
-                ))
-                .toList();
+        List<String> authorIds = extractMemberIdsFromBookReviews(bookReviews);
+        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
+
+        List<BookShelfResponseDTO.BookReviewDTO> bookReviewDTOList = mapBookReviewsAndAuthorInfoToDTOs(bookReviews, authorInfoMap);
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
-        return ClubConverter.fromBookReviewDTOListToBookReviewListDTO(bookReviewDTOs, hasNext, nextCursor, membershipDTO);
+        return ClubConverter.fromBookReviewDTOListToBookReviewListDTO(bookReviewDTOList, hasNext, nextCursor, membershipDTO);
+    }
+
+    private List<BookShelfResponseDTO.BookReviewDTO> mapBookReviewsAndAuthorInfoToDTOs(
+            List<BookReview> bookReviews,
+            Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap
+    ) {
+        return bookReviews.stream()
+                .map(review -> ClubConverter.fromBookReviewAndMemberSharedDTOToBookReviewDTO(
+                        review,
+                        authorInfoMap.get(review.getClubMember().getMemberId())
+                ))
+                .toList();
     }
 
     @Override
@@ -460,15 +470,24 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         }
         Long nextCursor = hasNext ? meetings.getLast().getId() : null;
 
-        List<MeetingResponseDTO.MeetingInfoDTO> meetingInfoDTOList = meetings.stream()
-                .map(meeting -> ClubConverter.fromMeetingAndBookSharedDTOToMeetingInfoDTO(
-                        meeting,
-                        bookQueryFacade.getBookBasicInfoForShare(meeting.getBookId())
-                ))
-                .toList();
+        List<String> bookIds = extractBookIdsFromMeetings(meetings);
+        Map<String, BookSharedDTO.BasicInfoDTO> bookBasicInfoMap = bookQueryFacade.getBookBasicInfoMapForShare(bookIds);
 
+        List<MeetingResponseDTO.MeetingInfoDTO> meetingInfoDTOList = mapMeetingsWithBookBasicInfoToDTOs(meetings, bookBasicInfoMap);
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
         return ClubConverter.fromMeetingInfoDTOListToMeetingListDTO(meetingInfoDTOList, hasNext, nextCursor, membershipDTO);
+    }
+
+    private List<MeetingResponseDTO.MeetingInfoDTO> mapMeetingsWithBookBasicInfoToDTOs(
+            List<Meeting> meetings,
+            Map<String, BookSharedDTO.BasicInfoDTO> bookBasicInfoMap
+    ) {
+        return meetings.stream()
+                .map(meeting -> ClubConverter.fromMeetingAndBookSharedDTOToMeetingInfoDTO(
+                        meeting,
+                        bookBasicInfoMap.get(meeting.getBookId())
+                ))
+                .toList();
     }
 
     @Override
@@ -481,35 +500,28 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         List<Topic> topics = clubMeetingQueryService.findTopicsWithClubMemberByMeeting(meetingId, null, 4);
 
         // 3. [발제 전체보기 - 미리보기] TeamTopic과 Team 배치 조회
-        List<Long> topicIds = topics.stream()
-                .map(Topic::getId)
-                .toList();
+        List<Long> topicIds = extractTopicIds(topics);
         Map<Long, List<Integer>> teamTopicsWithTeamByTopicIds = clubMeetingQueryService.findTeamTopicsWithTeamByTopicIds(topicIds);
 
         // 4. [토론 x조 - 미리보기] 해당하는 미팅의 존재하는 모든 팀 조회
         List<Team> teams = clubMeetingQueryService.findTeamsByMeeting(meetingId);
 
         // 5. [토론 x조 - 미리보기] 모든 팀의 발제 등록순 상위 4개 토픽 조회
-        Map<Integer, List<TeamTopic>> teamTopicsGroupingByTeamNumber = teams.stream()
+        Map<Integer, List<TeamTopic>> teamNumberToTeamTopics = teams.stream()
                 .collect(Collectors.toMap(
                         Team::getTeamNumber, // key: 팀 번호
                         team -> clubMeetingQueryService.findTeamTopicsWithTopicAndClubMemberByTeamId(team.getId(), 4) //value : 해당 팀의 발제 최신순 상위 4개 팀 토픽 리스트
                 ));
 
         // 6. 조회한 모든 발제(topics와 teamTopics)의 작성자 id를 중복 없이 리스트 조회
-        List<String> authorIds = Stream.concat(
-                        topics.stream().map(t -> t.getClubMember().getMemberId()),
-                        teamTopicsGroupingByTeamNumber.values().stream()
-                                .flatMap(List::stream)
-                                .map(tt -> tt.getTopic().getClubMember().getMemberId())
-                )
-                .filter(Objects::nonNull)
+        List<String> authorIds1 = extractMemberIdsFromTopics(topics);
+        List<String> authorIds2 = extractMemberIdsFromTeamTopics(teamNumberToTeamTopics);
+        List<String> authorIds = Stream.concat(authorIds1.stream(), authorIds2.stream())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         // 7. 발제의 작성자 정보 배치 조회
-        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap =
-                memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
+        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
 
@@ -517,9 +529,9 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         return ClubConverter.fromMeetingAndBookSharedDTOEtcToMeetingDetailDTO(
                 meeting, bookQueryFacade.getBookBasicInfoForShare(meeting.getBookId()), // -> MeetingInfoDTO
                 topics, teamTopicsWithTeamByTopicIds, // -> List<TopicDTO>
-                teams, teamTopicsGroupingByTeamNumber, // -> List<TeamTopicDTO>
+                teams, teamNumberToTeamTopics, // -> List<TeamTopicDTO>
                 authorInfoMap, // -> List<TopicDTO>, List<TeamTopicDTO> 작성자 정보
-                membershipDTO // -> MembershipDTO
+                membershipDTO
         );
     }
 
@@ -533,18 +545,12 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         List<Topic> topics = clubMeetingQueryService.findTopicsWithClubMemberByMeeting(meetingId, null, null);
 
         // 3. 토픽 작성자 정보 배치 조회
-        List<String> authorIds = topics.stream()
-                .map(topic -> topic.getClubMember().getMemberId())
-                .distinct()
-                .toList();
-        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap =
-                memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
+        List<String> authorIds = extractMemberIdsFromTopics(topics);
+        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
 
         // 4. TeamTopic과 Team 배치 조회
-        List<Long> topicIds = topics.stream()
-                .map(Topic::getId)
-                .toList();
-        Map<Long, List<Integer>> teamTopicsWithTeamByTopicIds = clubMeetingQueryService.findTeamTopicsWithTeamByTopicIds(topicIds);
+        List<Long> topicIds = extractTopicIds(topics);
+        Map<Long, List<Integer>> topicIdToSelectTeamNumbers = clubMeetingQueryService.findTeamTopicsWithTeamByTopicIds(topicIds);
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
 
@@ -552,7 +558,7 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         List<MeetingResponseDTO.TopicDTO> topicDTOList = ClubConverter.fromTopicListAndTopicSelectionAndMemberSharedDTOToTopicDTOList(
                 topics,
                 authorInfoMap,
-                teamTopicsWithTeamByTopicIds
+                topicIdToSelectTeamNumbers
         );
 
         return ClubConverter.fromTopicDTOListAndMembershipDTOToTopicListDTO(
@@ -571,23 +577,15 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
         List<TeamTopic> teamTopics = clubMeetingQueryService.findTeamTopicsWithTopicAndClubMemberByTeamId(team.getId(), null);
 
         // 3. 토픽 작성자 정보 배치 조회
-        List<String> authorIds = teamTopics.stream()
-                .map(
-                        teamTopic -> teamTopic.getTopic().getClubMember().getMemberId()
-                )
-                .distinct()
-                .toList();
-        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap =
-                memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
+        List<String> authorIds = extractMemberIdsFromTeamTopics(teamTopics);
+        Map<String, MemberSharedDTO.BasicInfoDTO> authorInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(authorIds);
 
-        // 4. TeamTopicDTO 변환
-        List<MeetingResponseDTO.TopicDTO> topicDTOList = teamTopics.stream()
-                .map(teamTopic -> ClubConverter.fromTopicAndMemberSharedDTOAndTeamNumberListToTopicDTO(
-                        teamTopic.getTopic(),
-                        authorInfoMap.get(teamTopic.getTopic().getClubMember().getMemberId()),
-                        null
-                ))
-                .toList();
+        // 4. TeamTopicDTO로 변환
+        List<MeetingResponseDTO.TopicDTO> topicDTOList = ClubConverter.fromTopicListAndTopicSelectionAndMemberSharedDTOToTopicDTOList(
+                extractTopicFromTeamTopics(teamTopics),
+                authorInfoMap,
+                Map.of() // 팀 토픽은 팀 번호가 필요없으니까 빈 Map 전달
+        );
 
         MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
 
@@ -600,13 +598,210 @@ public class ClubQueryFacadeImpl implements ClubQueryFacade {
     }
 
     @Override
-    public List<MeetingResponseDTO.MeetingMemberDTO> findMeetingMembersByMeeting(Long meetingId, String memberId) {
-        return List.of();
+    public MeetingResponseDTO.MeetingMemberListDTO findMeetingMembersByMeeting(Long meetingId, Long cursorId, Integer size, String memberId) {
+        // 1. 미팅, 클럽 멤버 검증
+        Meeting meeting = clubMeetingQueryService.validateMeeting(meetingId);
+        ClubMember clubMember = clubMemberQueryService.validateClubMember(meeting.getClubId(), memberId);
+        if (!clubMember.isStaff()) {
+            throw new GeneralException(ErrorStatus.CLUB_STAFF_ONLY);
+        }
+
+        // 2. 클럽의 회원 조회 및 페이징 처리 (이때 PENDING이나 BLOCKED 상태는 제외하고 STAFF나 MEMBER만 조회)
+        List<ClubMember> clubMembers = clubMemberQueryService.getClubMemberListByStatus(meeting.getClubId(), "ACTIVE", cursorId, size + 1);
+        boolean hasNext = clubMembers.size() > size;
+        if (hasNext) {
+            clubMembers = clubMembers.subList(0, size);
+        }
+        Long nextCursor = hasNext ? clubMembers.getLast().getId() : null;
+
+        // 3. 클럽 멤버에 대한 정보 배치 조회 (ClubMember의 memberId로 MemberSharedDTO.BasicInfoDTO 조회)
+        List<String> memberIds = extractMemberIdsFromClubMembers(clubMembers);
+        Map<String, MemberSharedDTO.BasicInfoDTO> memberBasicInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(memberIds);
+
+        // 4. 미팅에 존재하는 모든 팀 조회
+        List<Team> teams = clubMeetingQueryService.findTeamsByMeeting(meetingId); // TODO: 독서모임 상세조회 PR에 존재하는데 충돌날지도?!
+        List<Long> teamIds = extractTeamIds(teams);
+        Map<Long, Integer> teamIdToTeamNumberMap = mapTeamIdToTeamNumberMap(teams);
+
+        // 5. Map<memberId, teamId> 형태로 모든 팀의 팀원 조회
+        Map<String, Long> memberIdToTeamIdMap = clubMeetingQueryService.getMemberIdToTeamIdMap(teamIds);
+
+        // 6. 응답 DTO로 변환
+        Map<String, Integer> memberIdToTeamNumberMap = mapMemberIdToTeamNumberMap(memberIdToTeamIdMap, teamIdToTeamNumberMap);
+        MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
+        List<MeetingResponseDTO.MeetingMemberDTO> meetingMemberDTOList = clubMembers.stream()
+                .map(cm -> toMeetingMemberDTO(cm, memberBasicInfoMap, memberIdToTeamNumberMap))
+                .toList();
+        return ClubConverter.fromMeetingMemberDTOListToMeetingMemberListDTO(meetingMemberDTOList, hasNext, nextCursor, membershipDTO);
+    }
+
+    private MeetingResponseDTO.MeetingMemberDTO toMeetingMemberDTO(
+            ClubMember clubMember,
+            Map<String, MemberSharedDTO.BasicInfoDTO> memberBasicInfoMap,
+            Map<String, Integer> memberIdToTeamNumberMap
+    ) {
+        String memberId = clubMember.getMemberId();
+        MemberSharedDTO.BasicInfoDTO memberInfo = memberBasicInfoMap.get(memberId);
+        Integer teamNumber = memberIdToTeamNumberMap.get(memberId);
+        return ClubConverter.fromMemberSharedDTOAndTeamNumberToMeetingMemberDTO(memberInfo, teamNumber);
+    }
+
+    private Map<String, Integer> mapMemberIdToTeamNumberMap(Map<String, Long> memberIdToTeamIdMap, Map<Long, Integer> teamIdToTeamNumberMap) {
+        if (memberIdToTeamIdMap == null || memberIdToTeamIdMap.isEmpty()) {
+            return Map.of();
+        }
+        return memberIdToTeamIdMap.entrySet().stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,                                        // key: memberId
+                        e -> {
+                            Long teamId = e.getValue();                           // value: 팀ID (nullable)
+                            return (teamId == null) ? null : teamIdToTeamNumberMap.get(teamId);
+                        }
+                ));
+    }
+
+    private Map<Long, Integer> mapTeamIdToTeamNumberMap(List<Team> teams) {
+        if (teams == null) {
+            return Map.of();
+        }
+        return teams.stream()
+                .collect(Collectors.toMap(
+                        Team::getId, // key: 팀 ID
+                        Team::getTeamNumber // value: 팀 번호
+                ));
     }
 
     @Override
-    public List<MeetingResponseDTO.MeetingMemberDTO> findTeamMembersByMeeting(Long meetingId, Integer teamNumber, String memberId) {
-        return List.of();
+    public MeetingResponseDTO.TeamMemberDTO findTeamMembersByMeeting(Long meetingId, Integer teamNumber, String memberId) {
+        // 1. 검증
+        Meeting meeting = clubMeetingQueryService.validateMeeting(meetingId);
+        ClubMember clubMember = clubMemberQueryService.validateClubMember(meeting.getClubId(), memberId);
+        if (!clubMember.isStaff()) {
+            throw new GeneralException(ErrorStatus.CLUB_STAFF_ONLY);
+        }
+        Team team = clubMeetingQueryService.validateTeam(meetingId, teamNumber);
+
+        // 2. 팀 멤버 조회
+        List<MemberTeam> memberTeams = clubMeetingQueryService.getMemberTeamsByTeam(team.getId());
+
+        // 3. 클럽 멤버의 기본 정보 배치 조회
+        List<String> memberIds = extractMemberIdsFromMemberTeams(memberTeams);
+        Map<String, MemberSharedDTO.BasicInfoDTO> memberBasicInfoMap = memberQueryFacade.getMemberBasicInfoMapForShare(memberIds);
+
+        // 4. TeamMemberDTO 변환
+        MembershipResponseDTO.MembershipDTO membershipDTO = ClubConverter.fromClubMembertoMembershipDTO(clubMember);
+        return ClubConverter.fromTeamNumberAndMemberSharedDTOToTeamMemberDTO(teamNumber, memberBasicInfoMap.values().stream().toList(), membershipDTO);
+    }
+
+    private List<String> extractMemberIds(List<ClubMember> members) {
+        if (members == null) {
+            return List.of();
+        }
+        return members.stream()
+                .map(ClubMember::getMemberId)
+                .distinct()
+                .toList();
+    }
+
+    private List<String> extractMemberIdsFromMemberTeams(List<MemberTeam> memberTeams) {
+        if (memberTeams == null) {
+            return List.of();
+        }
+        return memberTeams.stream()
+                .map(mt -> mt.getClubMember().getMemberId())
+                .distinct()
+                .toList();
+    }
+
+    private List<String> extractMemberIdsFromBookReviews(List<BookReview> bookReviews) {
+        return bookReviews.stream()
+                .map(bookReview -> bookReview.getClubMember().getMemberId())
+                .distinct()
+                .toList();
+    }
+
+    private List<String> extractMemberIdsFromTopics(List<Topic> topics) {
+        if (topics == null) {
+            return List.of();
+        }
+        return topics.stream()
+                .map(topic -> topic.getClubMember().getMemberId())
+                .distinct()
+                .toList();
+    }
+
+    private List<String> extractBookIdsFromMeetings(List<Meeting> meetings) {
+        if (meetings == null) {
+            return List.of();
+        }
+        return meetings.stream()
+                .map(Meeting::getBookId)
+                .distinct()
+                .toList();
+    }
+
+
+    private List<String> extractMemberIdsFromTeamTopics(Map<Integer, List<TeamTopic>> teamNumberToTeamTopics) {
+        if (teamNumberToTeamTopics == null) {
+            return List.of();
+        }
+        return teamNumberToTeamTopics.values().stream()
+                .flatMap(List::stream)
+                .map(tt -> tt.getTopic().getClubMember().getMemberId())
+                .distinct()
+                .toList();
+    }
+
+    private List<Long> extractTopicIds(List<Topic> topics) {
+        if (topics == null) {
+            return List.of();
+        }
+        return topics.stream()
+                .map(Topic::getId)
+                .distinct()
+                .toList();
+    }
+
+
+    private List<String> extractMemberIdsFromTeamTopics(List<TeamTopic> teamTopics) {
+        if (teamTopics == null) {
+            return List.of();
+        }
+        return teamTopics.stream()
+                .map(tt -> tt.getTopic().getClubMember().getMemberId())
+                .distinct()
+                .toList();
+    }
+
+    private List<Topic> extractTopicFromTeamTopics(List<TeamTopic> teamTopics) {
+        if (teamTopics == null) {
+            return List.of();
+        }
+        return teamTopics.stream()
+                .map(TeamTopic::getTopic)
+                .distinct()
+                .toList();
+    }
+
+
+    private List<Long> extractTeamIds(List<Team> teams) {
+        if (teams == null) {
+            return List.of();
+        }
+        return teams.stream()
+                .map(Team::getId)
+                .distinct()
+                .toList();
+    }
+
+    private List<String> extractMemberIdsFromClubMembers(List<ClubMember> clubMembers) {
+        if (clubMembers == null) {
+            return List.of();
+        }
+        return clubMembers.stream()
+                .map(ClubMember::getMemberId)
+                .distinct()
+                .toList();
     }
 
     @Override
